Edit Smart Review